test/tests/operators/to_sentinelone_data_lake/validate_dry_run_token.txt
error: cannot use non-literal `token` with `_dry_run`
 --> tests/operators/to_sentinelone_data_lake/validate_dry_run_token.tql:6:55
  |
6 | to_sentinelone_data_lake "https://example.com", token=secret("S1_FIXTURE_TOKEN"), _dry_run=true
  |                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ not literal
  ⋮
6 | to_sentinelone_data_lake "https://example.com", token=secret("S1_FIXTURE_TOKEN"), _dry_run=true
  |                                                                                            ^^^^ 
  |
